kubernetes/apps/artemis-cluster/testing/future/duskbot-discord.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: duskbot
  namespace: default
  labels:
    app: duskbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: duskbot
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: duskbot
    spec:
      containers:
        - name: duskbot
          image: phasecorex/red-discordbot:full
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /data
              name: config
            - mountPath: /etc/localtime
              name: localtime
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: duskbot-config
        - name: localtime
          hostPath:
            path: /etc/localtime
        - name: rtc
          hostPath:
            path: /dev/rtc
