kubernetes/apps/artemis-cluster/testing/future/tautulli.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tautulli
  namespace: default
  labels:
    app: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tautulli
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: tautulli
    spec:
      containers:
      - name: tautulli
        image: tautulli/tautulli
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8181
        volumeMounts:
        - mountPath: /plex_logs
          name: appdata
          subPath: "plex/Library/Application Support/Plex Media Server/Logs/"
        - mountPath: /config
          name: appdata
        - mountPath: /etc/localtime
          name: localtime
        - mountPath: /tmp/tautulli
          name: transcode
      volumes:
      - name: appdata
        persistentVolumeClaim:
          claimName: tautulli-config
      - name: localtime
        hostPath:
          path: /etc/localtime
      - name: transcode
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: tautulli-svc
  labels:
    app: tautulli-svc
spec:
  type: NodePort
  ports:
  - port: 8181
    protocol: TCP
  selector:
    app: tautulli

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx-prod
  name: tautulli-ing
spec:
  rules:
  - host: plex.metrics.dcunhalab.com
    http:
      paths:
      - backend:
          serviceName: tautulli-svc
          servicePort: 8181
